feat: add Docker Compose, Dockerfiles, gateway auth config, and federation entity fixes
- Add docker-compose.yml for one-command full stack startup with health checks
- Add Dockerfiles for all three subgraphs (user, product, review)
- Fix Apollo Router config: sandbox, introspection, CORS, tracing via OTLP to Jaeger
- Add @DgsEntityFetcher for User/Product stubs in product-subgraph and review-subgraph
- Add typed federation stub records (User, Product) for ClassNameTypeResolver compatibility
- Fix spring-boot-maven-plugin repackage goal in all subgraph POMs
- Add -parameters compiler flag for DGS @InputArgument resolution
- Switch ReviewsByProductDataLoader to cached thread pool (Java 17 compatibility)